--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".Hauptbildschirm">
-
-        </activity>
+        <activity android:name=".Hauptbildschirm" />
         <activity android:name=".startActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,6 +39,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".profilActivity" />
+        <activity android:name=".registrierung" />
     </application>
 
 </manifest>
