--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,11 @@ dependencies {
     //testImplementation 'junit:junit:4.12'
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    implementation 'com.google.code.gson:gson:2.6.1'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 }
