--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'com.google.code.gson:gson:2.6.1'
-    implementation 'com.mcxiaoke.volley:library:1.0.19'
-    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    implementation 'com.google.maps.android:android-maps-utils:0.4+'
 }
