--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,16 +32,16 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".Hauptbildschirm" />
-        <activity android:name=".startActivity">
+        <activity android:name=".MainPageActivity" />
+        <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".profilActivity" />
-        <activity android:name=".registrierung" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".RegisterActivity" />
     </application>
 
 </manifest>
